yaml_parser/tests/fail/mapping-starting-at-----line.snap
---
source: yaml_parser/tests/fail.rs
---
parse error at line 2, column 9
  |
2 |     key2: value2
  |         ^
expected `...`
